# example-cookiecutter-fast-api-aws

./: .cfnlintrc  .editorconfig  .flake8  .pre-commit-config.yaml  README.md  aws_infrastructure.yaml  bitbucket-pipelines.yml  docker-compose.yml  mypy.ini  pyproject.toml
db_migrations/: env.py  generate_table_migration_from_rds_table.py
db_migrations/versions/: d4867f3a4c0a_first_revision.py
runtime/src/: initial_data.py  local_main.py  main.py  monitoring.py  utils.py
runtime/src/api/api_v1/: api.py
runtime/src/api/api_v1/endpoints/: items.py  login.py  users.py
runtime/src/api/utils/: security.py
runtime/src/core/: config.py  jwt.py
runtime/src/crud/: __init__.py  item.py  user.py
runtime/src/db/: base.py  init_db.py  session.py
runtime/src/db_models/: item.py  user.py
runtime/tests/: conftest.py
runtime/tests/integration/: conftest.py
runtime/tests/integration/api/api_v1/: test_items.py  test_login.py  test_users.py
runtime/tests/unit/core/: test_aws_secure_parameters.py
runtime/tests/unit/crud/: test_item.py  test_user.py
runtime/tests/utils/: item.py  user.py  utils.py
